# text2sql

./: .gitignore  .pylintrc  CLAUDE.md  DEVELOPMENT_STATUS.md  Makefile  README.md  app.py  common-requirements.md  full-task-list.md  module-dev-tasks.md  pyproject.toml
data/: rubicon_answer.txt  rubicon_tc.txt
src/: __init__.py  main.py
src/config/: constants.py  settings.py
src/connections/: base.py  connection_info.md  postgresql.py
src/utils/: decorators.py  exceptions.py  logger.py
tests/: __init__.py
